--- a/web/miss/projeler/index.html
+++ b/web/miss/projeler/index.html
@@ -240,15 +240,31 @@
             </td>
         </tr>
     </table>
-    
+
     <p class="baslik">
-        <img src="../images/bullet-krm.png"> Açılış Yöneticisi 
+        <img src="../images/bullet-krm.png"> Servis Yöneticisi
     </p>
     <table border=0 cellpadding=5>
         <tr>
+            <td valign=top>
+                <img src=../images/ksysv.png>
             </td>
             <td valign=top>
                 <p class="metin">Müdür adıyla geliştirilen, daha hızlı açılış sağlayan, Python diliyle yazıldığı için geliştirmesi ve bakımı kolay olan bir sistemdir. Bilgisayarınızda hangi servislerin kurulu olduğunu görmek, bunların açılışta başlayıp başlamayacağını ayarlamak, servislerin çalışma durumunu denetlemek, gerektiğinde yeniden başlatmak gibi ayarları yapmanızı sağlar.</p>
+            </td>
+        </tr>
+    </table>
+
+    <p class="baslik">
+        <img src="../images/bullet-krm.png"> Açılış Yöneticisi
+    </p>
+    <table border=0 cellpadding=5>
+        <tr>
+            <td valign=top>
+                <img src=../images/blockdevice.png>
+            </td>
+            <td valign=top>
+                <p class="metin">Bilgisayarınızı açtığınızda karşınıza gelen işletim sistemi seçimi (Grub) menüsünü düzenlemenizi sağlar. Menünün ne kadar süre bekleyeceğini, menüde hangi işletim sistemlerinin listeleneceğini ve menü geldiğinde hangisinin seçili olacağını belirleyebilir, menüde gereksiz yer tutan girdileri silebilir, kullanılmayan çekirdekleri sisteminizden silerek temizlik yapabilirsiniz.</p>
             </td>
         </tr>
     </table>
