Products bölümünde Pardus Live CD bölümü güncellendi

--- a/trunk/web/miss/eng/products/index.html
+++ b/trunk/web/miss/eng/products/index.html
@@ -72,12 +72,11 @@
         <br>
         Pardus Live CD can be used to check whether your hardware is
         ready for installing Pardus. However, note that, <b>it cannot be
-        used to install Pardus 2007.3 Lynx lynx to your hard disk</b>.
-        In order to install, you must download Pardus 2007.3 Lynx
-        lynx ISO file mentioned above.
+        used to install Pardus 2008.2 Canis aureus to your hard disk</b>.
+        In order to install, you must download Pardus 2008.2 Canis aureus ISO file mentioned above.
         <p>
     <ul>
-    <li><a href="ftp://ftp.pardus.org.tr/pub/pardus/calisan/2007.3/">Pardus 2007.3 Lynx lynx Live CD</a>
+    <li><a href="ftp://ftp.pardus.org.tr/pub/pardus/calisan/2008.2/">Pardus 2008.2 Canis aureus Live CD</a>
 	<li><a href="ftp://ftp.pardus.org.tr/pub/pardus/calisan/">Old live versions</a>
     </ul>
 	
