--- a/trunk/web/miss/index.html
+++ b/trunk/web/miss/index.html
@@ -63,13 +63,13 @@
                     <h2>Pardus Haberleri</h2>
                     <ul>
                         <li>
+                        <p class="metin"><strong>27 Mart 2009</strong> // Pardus Projesi, yaz stajı programını duyurdu. Ayrıntıları <a href="http://tr.pardus-wiki.org/Staj2009" target="_blank">PardusWiki'de</a> bulabilirsiniz.</p>
+                        </li>
+                        <li>
                         <p class="metin"><strong>8 Mart 2009</strong> // Pardus Projesi, dünyanın en büyük bilişim teknolojileri fuarı olan CeBIT Hannover 2009 Fuarı'na <a href="http://www.ozgurlukicin.com/haber/pardus-hannover-cebit-fuarinda/" target="_blank">katıldı</a>.</p>
                         </li>
                         <li>
                         <p class="metin"><strong>5 Mart 2009</strong> // <a href="http://www.ozgurlukicin.com" target="_blank">Özgürlükiçin</a> topluluğunun çıkardığı E-Dergi, onbirinci sayısını yayınladı. E-Dergi'ye <a href="http://www.ozgurlukicin.com/e-dergi/" target="_blank">buradan</a> ulaşabilirsiniz.</p>
-                        </li>
-                        <li>
-                        <p class="metin"><strong>1 Mart 2009</strong> // Pardus 2008.2 <i>Canis aureus</i> CD kalıplarını, PCWorld ve PCNet dergilerinin mart sayılarından edinebilirsiniz.</p>
                         </li>
                         <li>
                         <p class="metin"><strong>27 Şubat 2009</strong> // <a href="http://www.bilmok.org.tr/09/" target="_blank">BİLMÖK</a> - Bilgisayar Mühendisliği Öğrencileri Kongresi'nin bu yılki ana sponsoru Pardus Projesi oldu.</p>
