gelistiriciler asilmasin, sadece takilsinlar :)

--- a/trunk/web/miss/eng/contact.html
+++ b/trunk/web/miss/eng/contact.html
@@ -76,7 +76,7 @@
                     <br>
 
                     <span class="baslik"><img src="./images/bullet-krm.png"> IRC</span><br><br>
-                    Pardus developers occasionaly hang on IRC. There's
+                    Pardus developers occasionaly hangout on IRC. There's
                     an (unofficial) IRC channel, <b>#pardus-devel</b>
                     on Freenode, in which you can forward your questions
                     to Pardus developers or get help about Pardus development.
