--- a/trunk/web/miss/index.html
+++ b/trunk/web/miss/index.html
@@ -69,6 +69,9 @@
                         <p class="metin"><strong>27 Mart 2009</strong> // Pardus Projesi, yaz stajı programını duyurdu. Ayrıntıları <a href="http://tr.pardus-wiki.org/Staj2009" target="_blank">PardusWiki'de</a> bulabilirsiniz.</p>
                         </li>
                         <li>
+                        <p class="metin"><strong>20 Mart 2009</strong> // Pardus Projesi, üklemizden Google Summer of Code'a katılan tek proje oldu. Ayrıntıları <a href="http://en.pardus-wiki.org/SummerOfCode2009Ideas" target="_blank">PardusWiki'de</a> bulabilirsiniz.</p>
+                        </li>
+                        <li>
                         <p class="metin"><strong>8 Mart 2009</strong> // Pardus Projesi, dünyanın en büyük bilişim teknolojileri fuarı olan CeBIT Hannover 2009 Fuarı'na <a href="http://www.ozgurlukicin.com/haber/pardus-hannover-cebit-fuarinda/" target="_blank">katıldı</a>.</p>
                         </li>
                         <li>
