--- a/web/miss/index.html
+++ b/web/miss/index.html
@@ -47,13 +47,11 @@
             <!-- Manşet Başı -->
             <div id="mansetler">
                 <div id="manset">
-                    <h2>Pardus, Google Summer of Code'a<br />Katılıyor!</h2>
-                    <img src="resim/gsoc2009.png" align="right" valign="top" border="0" alt="Pardus" style="margin:10px;padding-top:20px;"/>
-                    <p>Pardus Projesi geçtiğimiz yıl olduğu gibi bu yıl da ülkemizden GSoC'a katılan tek yazılım projesi olma özelliğini taşıyor. Yaklaşık 400 başvurunun arasından seçilen 150 danışman organizasyon arasında Pardus Projesi de yerini aldı.</p>
-                    <p>2005 yılından bu yana düzenli olarak gerçekleşen ve bu yıl beşincisi yapılan GSoC, genç geliştiricilerin yaz boyunca kendilerini geliştirmelerini ve açık kaynakla tanışmasını hedefliyor.</p>
-                    <p>GSoC başvuruları, 23 Mart 2009 Pazartesi gününden itibaren başladı. Bu süre 3 Nisan 2009 Cuma günü son bulacak. Bundan sonra danışman organizasyonlar başvuruları değerlendirecek ve nisan ayı ortasında seçilen öğrenciler ve danışmanları eşleştirilmiş olacak. 23 Mayıs'ta GSoC projeleri için çalışmaya başlayacak öğrenciler, ağustos sonuna kadar zorlu ama keyifli bir kod yazma sürecinin içinde olacak.</p>
-                    <p>GSoC 2009 hakkında ayrıntılı bilgiye Google Summer of Code 2009 <a href="http://socghop.appspot.com/">sitesinden</a> ulaşabilir, Pardus'un GSoC projeleri fikirlerini <a href="http://en.pardus-wiki.org/SummerOfCode2009Ideas">burada</a> bulabilirsiniz.</p>
-                    <p>Pardus projesi ile birlikte GSoC'ta yer almak isteyen tüm öğrencilere şimdiden iyi şanslar ve başarılar dileriz.</p>
+                    <h2>KDE Programlama Atölyesi!</h2>
+                    <img src="resim/kde_konqi.png" align="right" valign="top" border="0" alt="Pardus" style="margin:10px;padding-top:20px;"/>
+                    <p>Pardus projesi, bu yıl sekizincisi düzenlenecek olan Linux ve Özgür Yazılım Şenliği‘nde “KDE Programlama” konu başlıklı bir atölye çalışması düzenliyor.</p>
+                    <p>17 Nisanda başlayacak şenlikte Pardus ile ilgili bir çok seminerin yanı sıra yapılacak atölye çalışmasında KDE ile ilgili bir programlama çalışması yapılacak. Atölye çalışmasının yapılacağı alanda yer alan kısıtlı sandalye sayısını iyi değerlendirmek ve gelecek katılımcılar için gerekli dokümanları hazırlamak için atölye çalışmasına kayıt olmak gerekli. Kayıt için <a href="http://www.pardus.org.tr/atolye/">bu formu</a> kullanabilirsiniz.</p>
+                    <p>Katılımcıların temel Python/Qt programlama bilgisine sahip olması, mümkünse KDE 4 ile tanışmış olması ve GNU/Linux kullanıyor olması katılım için yeterli. Atölye çalışması için tamamen ücretsiz olup katılmak için kayıt olmanız yeterli</p>
                 </div>
             </div>
             <!-- Manşet Sonu -->
@@ -69,7 +67,7 @@
                         <p class="metin"><strong>27 Mart 2009</strong> // Pardus Projesi, yaz stajı programını duyurdu. Ayrıntıları <a href="http://tr.pardus-wiki.org/Staj2009" target="_blank">PardusWiki'de</a> bulabilirsiniz.</p>
                         </li>
                         <li>
-                        <p class="metin"><strong>20 Mart 2009</strong> // Pardus Projesi, ülkemizden Google Summer of Code'a katılan tek proje oldu. Ayrıntıları <a href="http://en.pardus-wiki.org/SummerOfCode2009Ideas" target="_blank">PardusWiki'de</a> bulabilirsiniz.</p>
+                        <p class="metin"><strong>20 Mart 2009</strong> // Pardus Projesi, ülkemizden Google Summer of Code'a katılan tek proje oldu. Pardus'un GSoC proje fikirlerini <a href="http://en.pardus-wiki.org/SummerOfCode2009Ideas" target="_blank">PardusWiki'de</a> bulabilirsiniz.</p>
                         </li>
                         <li>
                         <p class="metin"><strong>8 Mart 2009</strong> // Pardus Projesi, dünyanın en büyük bilişim teknolojileri fuarı olan CeBIT Hannover 2009 Fuarı'na <a href="http://www.ozgurlukicin.com/haber/pardus-hannover-cebit-fuarinda/" target="_blank">katıldı</a>.</p>
