--- a/trunk/web/miss/index.html
+++ b/trunk/web/miss/index.html
@@ -50,7 +50,7 @@
                     <h2>KDE Programlama Atölyesi!</h2>
                     <img src="resim/kde_konqi.png" align="right" valign="top" border="0" alt="Pardus" style="margin:10px;padding-top:20px;"/>
                     <p>Pardus projesi, bu yıl sekizincisi düzenlenecek olan Linux ve Özgür Yazılım Şenliği‘nde “KDE Programlama” konu başlıklı bir atölye çalışması düzenliyor.</p>
-                    <p>17 Nisanda başlayacak şenlikte Pardus ile ilgili bir çok seminerin yanı sıra yapılacak atölye çalışmasında KDE ile ilgili bir programlama çalışması yapılacak. Atölye çalışmasının yapılacağı alanda yer alan kısıtlı sandalye sayısını iyi değerlendirmek ve gelecek katılımcılar için gerekli dokümanları hazırlamak için atölye çalışmasına kayıt olmak gerekli. Kayıt için <a href="http://www.pardus.org.tr/atolye/">bu formu</a> kullanabilirsiniz.</p>
+                    <p>17 Nisan'da başlayacak şenlikte Pardus ile ilgili birçok seminerin yanı sıra yapılacak atölye çalışmasında KDE ile ilgili bir programlama çalışması yapılacak. Atölye çalışmasının yapılacağı alanda yer alan kısıtlı sandalye sayısını iyi değerlendirmek ve gelecek katılımcılar için gerekli dokümanları hazırlamak için atölye çalışmasına kayıt olmak gerekli. Kayıt için <a href="http://www.pardus.org.tr/atolye/">bu formu</a> kullanabilirsiniz.</p>
                     <p>Katılımcıların temel Python/Qt programlama bilgisine sahip olması, mümkünse KDE 4 ile tanışmış olması ve GNU/Linux kullanıyor olması katılım için yeterli. Atölye çalışması için tamamen ücretsiz olup katılmak için kayıt olmanız yeterli</p>
                 </div>
             </div>
