--- a/web/miss/index.html
+++ b/web/miss/index.html
@@ -49,9 +49,9 @@
                 <div id="manset">
                     <h2>KDE Programlama Atölyesi!</h2>
                     <img src="resim/kde_konqi.png" align="right" valign="top" border="0" alt="Pardus" style="margin:10px;padding-top:20px;"/>
-                    <p>Pardus projesi, bu yıl sekizincisi düzenlenecek olan Linux ve Özgür Yazılım Şenliği‘nde “KDE Programlama” konu başlıklı bir atölye çalışması düzenliyor.</p>
-                    <p>17 Nisan'da başlayacak şenlikte Pardus ile ilgili birçok seminerin yanı sıra yapılacak atölye çalışmasında KDE ile ilgili bir programlama çalışması yapılacak. Atölye çalışmasının yapılacağı alanda yer alan kısıtlı sandalye sayısını iyi değerlendirmek ve gelecek katılımcılar için gerekli dokümanları hazırlamak için atölye çalışmasına kayıt olmak gerekli. Kayıt için <a href="http://www.pardus.org.tr/atolye/">bu formu</a> kullanabilirsiniz.</p>
-                    <p>Katılımcıların temel Python/Qt programlama bilgisine sahip olması, mümkünse KDE 4 ile tanışmış olması ve GNU/Linux kullanıyor olması katılım için yeterli. Atölye çalışması için tamamen ücretsiz olup katılmak için kayıt olmanız yeterli</p>
+                    <p>Pardus Projesi, bu yıl sekizincisi düzenlenecek olan <a href="http://senlik.linux.org.tr/2009/">Linux ve Özgür Yazılım Şenliği'nde</a> Pardus geliştiricilerinin yönetiminde, “KDE Programlama” başlıklı bir atölye çalışması düzenlenecek.</p>
+                    <p>17 Nisan'da başlayacak şenlikte Pardus ile ilgili birçok seminerin yanı sıra düzenlenecek atölye çalışmasında, katılımcılar KDE ile ilgili bir programlama maratonuna katılacak. Atölye çalışmasının yapılacağı alanda yer alan kısıtlı sandalye sayısını aşmamak ve gelecek katılımcılara gerekli kılavuz belgeleri hazırlamak için atölye çalışmasına kayıt olmanız gerekiyor. Kayıt için <a href="http://www.pardus.org.tr/atolye/">bu formu</a> kullanabilirsiniz.</p>
+                    <p>Katılımcıların temel Python/Qt programlama bilgisine sahip olması, mümkünse KDE 4 ortamı ile tanışık ve bir süredir bir GNU/Linux dağıtımı kullanıyor olması katılım için yeterlidir. Atölye çalışması tamamen ücretsiz olup, katılım için kayıt olmanız gerekiyor.</p>
                 </div>
             </div>
             <!-- Manşet Sonu -->
