--- a/web/miss/indir.html
+++ b/web/miss/indir.html
@@ -69,7 +69,10 @@
             &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/kurulan/2008.2">http</a> ]</li>
             <li><b>ODTÜ yansısı</b> [ <a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008.2">ftp</a>
             &nbsp;-&nbsp;<a href="http://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008.2">http</a> ]</li>
-            <!--
+	    <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/kurulan/2008.2">ÇOMÜ yansısı (ftp)</a></li>
+            <li><a href="ftp://ftp.linux.org.tr/pub/pardus/kurulan/2008.2">LKD yansısı (ftp)</a></li>
+            <li><a href="ftp://ftp.itu.edu.tr/Mirror/Pardus/pardus/kurulan/2008.2/">İTÜ yansısı (ftp)</a>
+	    <!--
             <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/kurulan/2008.2">ÇOMÜ yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.linux.org.tr/pub/pardus/kurulan/2008.2">LKD yansısı (ftp)</a></li>
             -->
@@ -80,7 +83,10 @@
             &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/calisan/2008.2">http</a> ]</li>
             <li><b>ODTÜ yansısı</b> [ <a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/calisan/2008.2">ftp</a>
             &nbsp;-&nbsp;<a href="http://ftp.metu.edu.tr/pardus/pub/pardus/calisan/2008.2">http</a> ]</li>
-            <!--
+            <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/calisan/2008.2">ÇOMÜ yansısı (ftp)</a></li>
+            <li><a href="ftp://ftp.linux.org.tr/pub/pardus/calisan/2008.2">LKD yansısı (ftp)</a></li>
+            <li><a href="ftp://ftp.itu.edu.tr/Mirror/Pardus/pardus/calisan/2008.2/">İTÜ yansısı (ftp)</a></li>
+	    <!--
             <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/calisan/2008.2">ÇOMÜ yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.linux.org.tr/pub/pardus/calisan/2008.2">LKD yansısı (ftp)</a></li>
             -->
