--- a/web/miss/eng/download.html
+++ b/web/miss/eng/download.html
@@ -60,6 +60,10 @@
                                     &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/installcd/2008.2">http</a> ]</li>
                                     <li><b>METU mirror</b> [ <a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/installcd/2008.2">ftp</a>
                                     &nbsp;-&nbsp;<a href="http://ftp.metu.edu.tr/pardus/pub/pardus/installcd/2008.2">http</a> ]</li>
+			            <li><b>ITU mirror</b> [ <a href="ftp://ftp.itu.edu.tr/Mirror/Pardus/pardus/installcd/2008.2">ftp</a>
+			            &nbsp;-&nbsp;<a href="http://ftp.itu.edu.tr/Mirror/Pardus/pardus/installcd/2008.2">http</a> ]</li>
+	    			    <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/installcd/2008.2">COMU mirror (ftp)</a></li>
+            			    <li><a href="ftp://ftp.linux.org.tr/pub/pardus/installcd/2008.2">LKD mirror (ftp)</a></li>
                                     <!-- Enable them after
                                     <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/installcd/2008.2">COMU mirror (ftp)</a></li>
                                     <li><a href="ftp://ftp.linux.org.tr/pub/pardus/installcd/2008.2">LKD mirror (ftp)</a></li>
@@ -70,6 +74,10 @@
                                     &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/livecd/2008.2">http</a> ]</li>
                                     <li><b>METU mirror</b> [ <a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/livecd/2008.2">ftp</a>
                                     &nbsp;-&nbsp;<a href="http://ftp.metu.edu.tr/pardus/pub/pardus/livecd/2008.2">http</a> ]</li>
+			            <li><b>ITU yansısı</b> [ <a href="ftp://ftp.itu.edu.tr/Mirror/Pardus/pardus/livecd/2008.2">ftp</a>
+			            &nbsp;-&nbsp;<a href="http://ftp.itu.edu.tr/Mirror/Pardus/pardus/livecd/2008.2">http</a> ]</li>
+			            <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/livecd/2008.2">COMU yansısı (ftp)</a></li>
+			            <li><a href="ftp://ftp.linux.org.tr/pub/pardus/livecd/2008.2">LKD yansısı (ftp)</a></li>
                                     <!-- Enable them after
                                     <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/livecd/2008.2">COMU mirror (ftp)</a></li>
                                     <li><a href="ftp://ftp.linux.org.tr/pub/pardus/livecd/2008.2">LKD mirror (ftp)</a></li>
@@ -105,14 +113,20 @@
                                     <ul> <h4 style="margin-bottom:2">INSTALLATION CD</h4>
                                     <li><b>Pardus Server</b> [ <a href="ftp://ftp.pardus.org.tr/pub/pardus/installcd/2008.1">ftp</a>
                                     &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/installcd/2008.1">http</a> ]</li>
-                                    <li><a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/installcd/2008.1">METU mirror(ftp)</a></li>
+			            <li><b>METU yansısı</b> [ <a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/installcd/2008.1">ftp</a>
+			            &nbsp;-&nbsp;<a href="http://ftp.metu.edu.tr/pardus/pub/pardus/installcd/2008.1">http</a> ]</li>
+			            <li><b>ITU yansısı</b> [ <a href="ftp://ftp.itu.edu.tr/Mirror/Pardus/pardus/installcd/2008.1">ftp</a>
+			            &nbsp;-&nbsp;<a href="http://ftp.itu.edu.tr/Mirror/Pardus/pardus/installcd/2008.1">http</a> ]</li>
                                     <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/installcd/2008.1">COMU mirror (ftp)</a></li>
                                     <li><a href="ftp://ftp.linux.org.tr/pub/pardus/installcd/2008.1">LKD mirror (ftp)</a></li>
                                     <h4 style="margin-bottom:2">LIVE CD</h4>
 
                                     <li><b>Pardus Server</b> [ <a href="ftp://ftp.pardus.org.tr/pub/pardus/livecd/2008.1">ftp</a>
                                     &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/livecd/2008.1">http</a> ]</li>
-                                    <li><a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/livecd/2008.1">METU mirror(ftp)</a></li>
+			            <li><b>METU yansısı</b> [ <a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/livecd/2008.1">ftp</a>
+			            &nbsp;-&nbsp;<a href="http://ftp.metu.edu.tr/pardus/pub/pardus/livecd/2008.1">http</a> ]</li>
+			            <li><b>ITU yansısı</b> [ <a href="ftp://ftp.itu.edu.tr/Mirror/Pardus/pardus/livecd/2008.1">ftp</a>
+			            &nbsp;-&nbsp;<a href="http://ftp.itu.edu.tr/Mirror/Pardus/pardus/livecd/2008.1">http</a> ]</li>
                                     <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/livecd/2008.1">COMU mirror (ftp)</a></li>
                                     <li><a href="ftp://ftp.linux.org.tr/pub/pardus/livecd/2008.1">LKD mirror (ftp)</a></li>
                                     </ul>
@@ -135,15 +149,18 @@
                                 <p>You can use the links below to download Pardus 2008:</p>
                                 <p>
                                     <ul>
-                                    <li><b>Pardus Server</b> [ <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008">ftp</a>
-                                    &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/kurulan/2008">http</a> ]</li>
+                                    <li><b>Pardus Server</b> [ <a href="ftp://ftp.pardus.org.tr/pub/pardus/installcd/2008">ftp</a>
+                                    &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/installcd/2008">http</a> ]</li>
+			            <li><b>METU yansısı</b> [ <a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/installcd/2008">ftp</a>
+			            &nbsp;-&nbsp;<a href="http://ftp.metu.edu.tr/pardus/pub/pardus/installcd/2008">http</a> ]</li>
+			            <li><b>ITU yansısı</b> [ <a href="ftp://ftp.itu.edu.tr/Mirror/Pardus/pardus/installcd/2008">ftp</a>
+			            &nbsp;-&nbsp;<a href="http://ftp.itu.edu.tr/Mirror/Pardus/pardus/installcd/2008">http</a> ]</li>
                                     <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/installcd/2008">COMU mirror (ftp)</a></li>
-                                    <li><a href="ftp://ftp.linux.org.tr/pub/pardus/kurulan/2008">LKD mirror (ftp)</a></li>
-                                    <li><a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008">METU mirror(ftp)</a></li>
+                                    <li><a href="ftp://ftp.linux.org.tr/pub/pardus/installcd/2008">LKD mirror (ftp)</a></li>
                                     </ul>
                                 </p>
                                 <!-- Do we provide them?
-                                <p>You may also download Pardus 2008 using P2P tools with <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008/Pardus_2008-Kurulan.iso.torrent">torrent</a> address.</p>
+                                <p>You may also download Pardus 2008 using P2P tools with <a href="ftp://ftp.pardus.org.tr/pub/pardus/installcd/2008/Pardus_2008-Kurulan.iso.torrent">torrent</a> address.</p>
                                 -->
                         </td></tr>
                     </table>
