--- a/web/miss/indir.html
+++ b/web/miss/indir.html
@@ -69,9 +69,10 @@
             &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/kurulan/2008.2">http</a> ]</li>
             <li><b>ODTÜ yansısı</b> [ <a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008.2">ftp</a>
             &nbsp;-&nbsp;<a href="http://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008.2">http</a> ]</li>
+            <li><b>İTÜ yansısı</b> [ <a href="ftp://ftp.itu.edu.tr/Mirror/Pardus/pardus/kurulan/2008.2">ftp</a>
+            &nbsp;-&nbsp;<a href="http://ftp.itu.edu.tr/Mirror/Pardus/pardus/kurulan/2008.2">http</a> ]</li>
 	    <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/kurulan/2008.2">ÇOMÜ yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.linux.org.tr/pub/pardus/kurulan/2008.2">LKD yansısı (ftp)</a></li>
-            <li><a href="ftp://ftp.itu.edu.tr/Mirror/Pardus/pardus/kurulan/2008.2/">İTÜ yansısı (ftp)</a>
 	    <!--
             <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/kurulan/2008.2">ÇOMÜ yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.linux.org.tr/pub/pardus/kurulan/2008.2">LKD yansısı (ftp)</a></li>
@@ -83,9 +84,10 @@
             &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/calisan/2008.2">http</a> ]</li>
             <li><b>ODTÜ yansısı</b> [ <a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/calisan/2008.2">ftp</a>
             &nbsp;-&nbsp;<a href="http://ftp.metu.edu.tr/pardus/pub/pardus/calisan/2008.2">http</a> ]</li>
+            <li><b>İTÜ yansısı</b> [ <a href="ftp://ftp.itu.edu.tr/Mirror/Pardus/pardus/calisan/2008.2">ftp</a>
+            &nbsp;-&nbsp;<a href="http://ftp.itu.edu.tr/Mirror/Pardus/pardus/calisan/2008.2">http</a> ]</li>
             <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/calisan/2008.2">ÇOMÜ yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.linux.org.tr/pub/pardus/calisan/2008.2">LKD yansısı (ftp)</a></li>
-            <li><a href="ftp://ftp.itu.edu.tr/Mirror/Pardus/pardus/calisan/2008.2/">İTÜ yansısı (ftp)</a></li>
 	    <!--
             <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/calisan/2008.2">ÇOMÜ yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.linux.org.tr/pub/pardus/calisan/2008.2">LKD yansısı (ftp)</a></li>
@@ -114,14 +116,20 @@
         <ul> <h4 style="margin-bottom:2">KURULAN CD</h4>
             <li><b>Pardus Sunucusu</b> [ <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008.1">ftp</a>
             &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/kurulan/2008.1">http</a> ]</li>
-            <li><a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008.1">ODTÜ yansısı(ftp)</a></li>
+            <li><b>ODTÜ yansısı</b> [ <a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008.1">ftp</a>
+            &nbsp;-&nbsp;<a href="http://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008.1">http</a> ]</li>
+            <li><b>İTÜ yansısı</b> [ <a href="ftp://ftp.itu.edu.tr/Mirror/Pardus/pardus/kurulan/2008.1">ftp</a>
+            &nbsp;-&nbsp;<a href="http://ftp.itu.edu.tr/Mirror/Pardus/pardus/kurulan/2008.1">http</a> ]</li>
             <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/kurulan/2008.1">ÇOMÜ yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.linux.org.tr/pub/pardus/kurulan/2008.1">LKD yansısı (ftp)</a></li>
             <h4 style="margin-bottom:2">ÇALIŞAN CD</h4>
 
             <li><b>Pardus Sunucusu</b> [ <a href="ftp://ftp.pardus.org.tr/pub/pardus/calisan/2008.1">ftp</a>
             &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/calisan/2008.1">http</a> ]</li>
-            <li><a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/calisan/2008.1">ODTÜ yansısı(ftp)</a></li>
+            <li><b>ODTÜ yansısı</b> [ <a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/calisan/2008.1">ftp</a>
+            &nbsp;-&nbsp;<a href="http://ftp.metu.edu.tr/pardus/pub/pardus/calisan/2008.1">http</a> ]</li>
+            <li><b>İTÜ yansısı</b> [ <a href="ftp://ftp.itu.edu.tr/Mirror/Pardus/pardus/calisan/2008.1">ftp</a>
+            &nbsp;-&nbsp;<a href="http://ftp.itu.edu.tr/Mirror/Pardus/pardus/calisan/2008.1">http</a> ]</li>
             <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/calisan/2008.1">ÇOMÜ yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.linux.org.tr/pub/pardus/calisan/2008.1">LKD yansısı (ftp)</a></li>
         </ul></p>
@@ -149,9 +157,12 @@
         <ul> 
             <li><b>Pardus Sunucusu</b> [ <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008">ftp</a>
             &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/kurulan/2008">http</a> ]</li>
+            <li><b>ODTÜ yansısı</b> [ <a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008">ftp</a>
+            &nbsp;-&nbsp;<a href="http://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008">http</a> ]</li>
+            <li><b>İTÜ yansısı</b> [ <a href="ftp://ftp.itu.edu.tr/Mirror/Pardus/pardus/kurulan/2008">ftp</a>
+            &nbsp;-&nbsp;<a href="http://ftp.itu.edu.tr/Mirror/Pardus/pardus/kurulan/2008">http</a> ]</li>
             <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/installcd/2008">ÇOMÜ yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.linux.org.tr/pub/pardus/kurulan/2008">LKD yansısı (ftp)</a></li>
-            <li><a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008">ODTÜ yansısı(ftp)</a></li>
         </ul></p>
         <!-- <p>Ayrıca Pardus 2008'i <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008/Pardus_2008-Kurulan.iso.torrent">torrent</a> adresini kullanarak P2P araçları ile de indirebilirsiniz.</p> -->
       </p>
