--- a/web/miss/projeler/masaustu/zemberek-pardus/index.html
+++ b/web/miss/projeler/masaustu/zemberek-pardus/index.html
@@ -56,7 +56,7 @@
 
 <p class="icmetin">
 Zemberek Pardus
-projesi, <a href="https://zemberek.dev.java.net/">Zemberek</a> Türkçe doğal
+projesi, <a href="http://zemberek.googlecode.com">Zemberek</a> Türkçe doğal
 dil işleme yazılımını Pardus ve üzerindeki yazılımlar ile
 birleştirmeyi amaçlamaktadır.
 </p>
