fix svn address

--- a/trunk/web/miss/eng/projects/masaustu/kaptan/index.html
+++ b/trunk/web/miss/eng/projects/masaustu/kaptan/index.html
@@ -64,7 +64,7 @@ Pardus desktop enviroment starts for the first time. With Kaptan, you can
  align="top"><span class="baslik"> Download</span>
             </p>
             <p class="icmetin">
-            Kaptan can be downloaded from <a href="http://svn.pardus.org.tr/uludag/trunk/kaptan4">SVN repository</a>
+            Kaptan can be downloaded from <a href="http://svn.pardus.org.tr/uludag/trunk/kde4/kaptan4">SVN repository</a>
             </p>
             </div>
 <!-- SAYFA İÇERİK SONU -->
