--- a/web/miss/projeler/masaustu/kaptan/index.html
+++ b/web/miss/projeler/masaustu/kaptan/index.html
@@ -82,7 +82,7 @@ kullanabilmesi için temel yapılandırma seçeneklerini de düzenler.
 </p>
 
 <p class="icmetin">
-<a href="http://svn.pardus.org.tr/uludag/trunk/kaptan4">http://svn.pardus.org.tr/uludag/trunk/kaptan4</a>
+<a href="http://svn.pardus.org.tr/uludag/trunk/kde4/kaptan4">http://svn.pardus.org.tr/uludag/trunk/kde4/kaptan4</a>
 </p>
 
 </div>
