Update ahenk LDAP schema address

--- a/trunk/web/miss/projeler/comar/oid.html
+++ b/trunk/web/miss/projeler/comar/oid.html
@@ -96,7 +96,7 @@
 </p>
 
 <p>
-Pardus altındaki nesneler henüz çalışma halindedir. Güncel listeye <a href="http://svn.pardus.org.tr/uludag/trunk/comar/ahenk/ahenk.schema">şema dosyası</a>ndan ulaşabilirsiniz.
+Pardus altındaki nesneler henüz çalışma halindedir. Güncel listeye <a href="http://svn.pardus.org.tr/uludag/branches/ahenk-1.0/ahenk.schema">şema dosyası</a>ndan ulaşabilirsiniz.
 </p>
 
 </div>
