--- a/web/miss/index.html
+++ b/web/miss/index.html
@@ -47,11 +47,13 @@
             <!-- Manşet Başı -->
             <div id="mansetler">
                 <div id="manset">
-                    <h2>KDE Programlama Atölyesi!</h2>
-                    <img src="resim/kde_konqi.png" align="right" valign="top" border="0" alt="Pardus" style="margin:10px;padding-top:20px;"/>
-                    <p>Pardus Projesi, bu yıl sekizincisi düzenlenecek olan <a href="http://senlik.linux.org.tr/2009/">Linux ve Özgür Yazılım Şenliği'nde</a> Pardus geliştiricilerinin yönetiminde, “KDE Programlama” başlıklı bir atölye çalışması düzenlenecek.</p>
-                    <p>17 Nisan'da başlayacak şenlikte Pardus ile ilgili birçok seminerin yanı sıra düzenlenecek atölye çalışmasında, katılımcılar KDE ile ilgili bir programlama maratonuna katılacak. Atölye çalışmasının yapılacağı alanda yer alan kısıtlı sandalye sayısını aşmamak ve gelecek katılımcılara gerekli kılavuz belgeleri hazırlamak için atölye çalışmasına kayıt olmanız gerekiyor. Kayıt için <a href="http://www.pardus.org.tr/atolye/">bu formu</a> kullanabilirsiniz.</p>
-                    <p>Katılımcıların temel Python/Qt programlama bilgisine sahip olması, mümkünse KDE 4 ortamı ile tanışık ve bir süredir bir GNU/Linux dağıtımı kullanıyor olması katılım için yeterlidir. Atölye çalışması tamamen ücretsiz olup, katılım için kayıt olmanız gerekiyor.</p>
+                    <h2>Pardus'09 Yaz Stajı</h2>
+                    <img src="resim/pardus-yaz-staji.png" align="right" valign="top" border="0" alt="Pardus" style="margin:10px;padding-top:20px;"/>
+                    <p>Pardus Projesi, her yıl kapılarını öğrencilere açmaya ve onları açık kaynak kodlu yazılımların geliştirme süreçlerinde eğitmeye devam ediyor. Pardus Projesi, kendi bünyesinde iki yıldır devam ettirdiği yaz stajı programını duyurdu.</p>
+                    <p>Proje, staj kapsamında geliştirici adaylarına kendi projelerini özgür yazılım mantığı ile Pardus çatısı altında geliştirme fırsatı veriyor. Bu projeler, staj sonunda Pardus Projesi'nin bir parçası haline gelecek. Staj başvuruları herkese açık. Staj başvuruları için son tarih <strong>24 Nisan</strong> olarak belirlendi.</p>
+                    <p>Staj başvurusu yaparken Pardus ekibinin dikkat etmenizi istediği konuların başında sadece bir CV'den çok kod örneklerinizle, yaptığınız projelerle, daha önce katıldığınız staj programlarını; kısaca sizi daha iyi tanımalarını sağlayacak tüm bilgileri ekibe ulaştırmanız geliyor. CV'lerinizi <a href="http://tr.pardus-wiki.org/Odf">özgür standartları</a> kullanarak göndermeniz gerekiyor.</p>
+                    <p>Staj başvurularını staj<img src="resim/at.png" style="vertical-align:middle" alt="at"/>pardus.org.tr adresine gönderebilirsiniz.</p>
+                    <p>Yaz stajında yer alan projelerle ilgili bilgi almak ve projelerin gerekliliklerini öğrenmek için <a href="http://tr.pardus-wiki.org/Staj2009" target="_blank">bu adresi</a> ziyaret edebilirsiniz.</p>
                 </div>
             </div>
             <!-- Manşet Sonu -->
