Pardus Haberlerine GSoC Sonuçları Belli Oldu haberi eklendi.

--- a/trunk/web/miss/index.html
+++ b/trunk/web/miss/index.html
@@ -63,13 +63,13 @@
                     <h2>Pardus Haberleri</h2>
                     <ul>
                         <li>
+                        <p class="metin"><strong>21 Nisan 2009</strong> // Pardus Projesi, ülkemizden Google Summer of Code'a katılan tek proje oldu. GSoC kapsamında Pardus Projesi için çalışacak öğrenciler ve projelerle ilgili ayrıntılı bilgiye <a href="http://www.ozgurlukicin.com/haber/gsoc-sonuclari-belli-oldu/">buradan</a> ulaşabilirsiniz.</p>
+                        </li>
+                        <li>
                         <p class="metin"><strong>2 Nisan 2009</strong> // <a href="http://www.ozgurlukicin.com" target="_blank">Özgürlükiçin</a> topluluğunun çıkardığı E-Dergi, onikinci sayısını yayınladı. E-Dergi'ye <a href="http://www.ozgurlukicin.com/e-dergi/" target="_blank">buradan</a> ulaşabilirsiniz.</p>
                         </li>
                         <li>
                         <p class="metin"><strong>27 Mart 2009</strong> // Pardus Projesi, yaz stajı programını duyurdu. Ayrıntıları <a href="http://tr.pardus-wiki.org/Staj2009" target="_blank">PardusWiki'de</a> bulabilirsiniz.</p>
-                        </li>
-                        <li>
-                        <p class="metin"><strong>20 Mart 2009</strong> // Pardus Projesi, ülkemizden Google Summer of Code'a katılan tek proje oldu. Pardus'un GSoC proje fikirlerini <a href="http://en.pardus-wiki.org/SummerOfCode2009Ideas" target="_blank">PardusWiki'de</a> bulabilirsiniz.</p>
                         </li>
                         <li>
                         <p class="metin"><strong>8 Mart 2009</strong> // Pardus Projesi, dünyanın en büyük bilişim teknolojileri fuarı olan CeBIT Hannover 2009 Fuarı'na <a href="http://www.ozgurlukicin.com/haber/pardus-hannover-cebit-fuarinda/" target="_blank">katıldı</a>.</p>
