--- a/web/miss/eng/press/index.html
+++ b/web/miss/eng/press/index.html
@@ -66,8 +66,10 @@ You can reach all Pardus related images and logos using the following links.
 <td width="10" valign="top">&nbsp;</td>
                <td width="661" valign="top" class="metin"><p><span class="baslik"><font face="Verdana, Arial, Helvetica, sans-serif">Pardus in press</font></span><br>
                         <br />
+<span class="metin"><img src="../images/bullet-krm.png" alt=""> <a href="news07.html">Archive of news published in 2007</a></span>
+                        <br /><br />
 <span class="metin"><img src="../images/bullet-krm.png" alt=""> <a href="news06.html">Archive of news published in 2006</a></span>
-                        <br />
+                        <br /><br />
 <span class="metin"><img src="../images/bullet-krm.png" alt=""> <a href="news05.html">Archive of news published in 2005</a></span>
 
                 </td>
