2009 basın bültenine Emo Genç İzmir eklendi

--- a/trunk/web/miss/basin/haber09.html
+++ b/trunk/web/miss/basin/haber09.html
@@ -59,6 +59,9 @@
 						<span class="metin">2009 yılında gazete ve dergilerde yayımlanan haberlerin bir bölümüne aşağıdan ulaşabilirsiniz...</span>
 						<br /><br />
 
+                        <span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2009.04.01/EmoGenc-Izmir-Nisan09.jpeg">EMO-GENÇ Bülteni</a>, 01.04.2009</span> <br><i>"Özgür Yazılım ve Pardus Semineri"</i>
+                        <br /><br />
+
                         <span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2009.03.01/Asadvizyon-Mart09.jpeg">ASADVİZYON</a>, 01.03.2009</span> <br><i>"Pardus Yazılım Konferansı"</i>
                         <br /><br />
 
