Pardus'09 Yaz Stajı Sonuçlandı haberi eklendi

--- a/trunk/web/miss/index.html
+++ b/trunk/web/miss/index.html
@@ -46,13 +46,26 @@
             <!-- Manşet Başı -->
             <div id="mansetler">
                 <div id="manset">
-                    <h2>Pardus'09 Yaz Stajı</h2>
+                    <h2>Pardus'09 Yaz Stajı Sonuçları Açıklandı</h2>
                     <img src="resim/pardus-yaz-staji.png" align="right" valign="top" border="0" alt="Pardus" style="margin:10px;padding-top:20px;"/>
-                    <p>Pardus Projesi, her yıl kapılarını öğrencilere açmaya ve onları açık kaynak kodlu yazılımların geliştirme süreçlerinde eğitmeye devam ediyor. Pardus Projesi, kendi bünyesinde iki yıldır devam ettirdiği yaz stajı programını duyurdu.</p>
-                    <p>Proje, staj kapsamında geliştirici adaylarına kendi projelerini özgür yazılım mantığı ile Pardus çatısı altında geliştirme fırsatı veriyor. Bu projeler, staj sonunda Pardus Projesi'nin bir parçası haline gelecek. Staj başvuruları herkese açık. Staj başvuruları için son tarih <strong>24 Nisan</strong> olarak belirlendi.</p>
-                    <p>Staj başvurusu yaparken Pardus ekibinin dikkat etmenizi istediği konuların başında sadece bir CV'den çok kod örneklerinizle, yaptığınız projelerle, daha önce katıldığınız staj programlarını; kısaca sizi daha iyi tanımalarını sağlayacak tüm bilgileri ekibe ulaştırmanız geliyor. CV'lerinizi <a href="http://tr.pardus-wiki.org/Odf">özgür standartları</a> kullanarak göndermeniz gerekiyor.</p>
-                    <p>Staj başvurularını staj<img src="resim/at.png" style="vertical-align:middle" alt="at"/>pardus.org.tr adresine gönderebilirsiniz.</p>
-                    <p>Yaz stajında yer alan projelerle ilgili bilgi almak ve projelerin gerekliliklerini öğrenmek için <a href="http://tr.pardus-wiki.org/Staj2009" target="_blank">bu adresi</a> ziyaret edebilirsiniz.</p>
+                    <p>Pardus Projesi, bu yıl da kendi bünyesinde öğrencilere yaz stajı imkanı sağlıyor. Pardus'09 Yaz Stajı programının başvuru sürecinin sona ermesinin ardından başvuruda bulunan öğrenciler için heyecanlı bir bekleyiş başladı.</p>
+                    <p>Bu yıl Pardus Projesi kapsamındaki staj programına <strong>83 kişi</strong> başvurdu. Pardus'09 Yaz Stajı'na başvuranlar arasından <strong>13 kişi</strong> staja kabul edildi. Staj programına kabul edilen öğrenciler:</p>
+                    <ul>
+                    <li>Cihan Okyay (Ondokuz Mayıs Üniversitesi)</li>
+                    <li>Mete Bilgin (Çanakkale Onsekiz Mart Üniversitesi)</li>
+                    <li>Renan Çakırerk (Yakın Doğu Üniversitesi)</li>
+                    <li>Levent Dane (Galatasaray Üniversitesi)</li>
+                    <li>Osman Mollahamut (İstanbul Teknik Üniversitesi)</li>
+                    <li>Enes Albay (İstanbul Teknik Üniversitesi)</li>
+                    <li>Cihat İmamoğlu (Boğaziçi Üniversitesi)</li>
+                    <li>Umur Çınar (Orta Doğu Teknik Üniversitesi)</li>
+                    <li>Volkan Esgel (Işık Üniversitesi)</li>
+                    <li>Şükrü Bezen (Orta Doğu Teknik Üniversitesi)</li>
+                    <li>Gökmen Görgen (Eskişehir Osmangazi Üniversitesi)</li>
+                    <li>Metin Akdere (Çanakkale Onsekiz Mart Üniversitesi)</li>
+                    <li>Aşkın Yollu (Dokuz Eylül Üniversitesi)</li>
+                    </ul>
+                    <p>Pardus'09 Yaz Stajı programı kapsamında <a href="http://tr.pardus-wiki.org/Staj2009">burada</a> yer alan konular üzerinde çalışacak olan arkadaşlar, Pardus'un gelişimine katkıda bulunmakla birlikte, kendi açılarından da faydalı olacak bir eğitim ve deneyim olanağı bulacaklar. Kendilerini tebrik ediyor, başarılı ve eğlenceli bir staj programı geçirmelerini diliyoruz.</p>
                 </div>
             </div>
             <!-- Manşet Sonu -->
